Updates from Overleaf

--- a/VTthesis.bib
+++ b/VTthesis.bib
@@ -562,4 +562,182 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{1996ApJ...462..563N,
+       author = {{Navarro}, Julio F. and {Frenk}, Carlos S. and {White}, Simon D.~M.},
+        title = "{The Structure of Cold Dark Matter Halos}",
+      journal = {\apj},
+     keywords = {COSMOLOGY: THEORY, COSMOLOGY: DARK MATTER, GALAXIES: HALOS, METHODS: NUMERICAL, Astrophysics},
+         year = 1996,
+        month = may,
+       volume = {462},
+        pages = {563},
+          doi = {10.1086/177173},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/9508025},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1996ApJ...462..563N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2010APh....34..274D,
+       author = {{Di Bernardo}, Giuseppe and {Evoli}, Carmelo and {Gaggero}, Daniele and {Grasso}, Dario and {Maccione}, Luca},
+        title = "{Unified interpretation of cosmic ray nuclei and antiproton recent measurements}",
+      journal = {Astroparticle Physics},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2010,
+        month = dec,
+       volume = {34},
+       number = {5},
+        pages = {274-283},
+          doi = {10.1016/j.astropartphys.2010.08.006},
+archivePrefix = {arXiv},
+       eprint = {0909.4548},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010APh....34..274D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1998ApJ...509..212S,
+       author = {{Strong}, Andrew W. and {Moskalenko}, Igor V.},
+        title = "{Propagation of Cosmic-Ray Nucleons in the Galaxy}",
+      journal = {\apj},
+     keywords = {ACCELERATION OF PARTICLES, ISM: COSMIC RAYS, DIFFUSION, GALAXY: GENERAL, ISM: ABUNDANCES, ISM: GENERAL, Acceleration of Particles, ISM: Cosmic Rays, Diffusion, Galaxy: General, ISM: Abundances, ISM: General, Astrophysics, High Energy Physics - Phenomenology},
+         year = 1998,
+        month = dec,
+       volume = {509},
+       number = {1},
+        pages = {212-228},
+          doi = {10.1086/306470},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/9807150},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1998ApJ...509..212S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014PhRvL.113l1101A,
+       author = {{Accardo}, L. and {Aguilar}, M. and {Aisa}, D. and {Alvino}, A. and {Ambrosi}, G. and {Andeen}, K. and {Arruda}, L. and {Attig}, N. and {Azzarello}, P. and {Bachlechner}, A. and {Barao}, F. and {Barrau}, A. and {Barrin}, L. and {Bartoloni}, A. and {Basara}, L. and {Battarbee}, M. and {Battiston}, R. and {Bazo}, J. and {Becker}, U. and {Behlmann}, M. and {Beischer}, B. and {Berdugo}, J. and {Bertucci}, B. and {Bigongiari}, G. and {Bindi}, V. and {Bizzaglia}, S. and {Bizzarri}, M. and {Boella}, G. and {de Boer}, W. and {Bollweg}, K. and {Bonnivard}, V. and {Borgia}, B. and {Borsini}, S. and {Boschini}, M.~J. and {Bourquin}, M. and {Burger}, J. and {Cadoux}, F. and {Cai}, X.~D. and {Capell}, M. and {Caroff}, S. and {Casaus}, J. and {Cascioli}, V. and {Castellini}, G. and {Cernuda}, I. and {Cervelli}, F. and {Chae}, M.~J. and {Chang}, Y.~H. and {Chen}, A.~I. and {Chen}, H. and {Cheng}, G.~M. and {Chen}, H.~S. and {Cheng}, L. and {Chikanian}, A. and {Chou}, H.~Y. and {Choumilov}, E. and {Choutko}, V. and {Chung}, C.~H. and {Clark}, C. and {Clavero}, R. and {Coignet}, G. and {Consolandi}, C. and {Contin}, A. and {Corti}, C. and {Coste}, B. and {Cui}, Z. and {Dai}, M. and {Delgado}, C. and {Della Torre}, S. and {Demirk{\"o}z}, M.~B. and {Derome}, L. and {Di Falco}, S. and {Di Masso}, L. and {Dimiccoli}, F. and {D{\'\i}az}, C. and {von Doetinchem}, P. and {Du}, W.~J. and {Duranti}, M. and {D'Urso}, D. and {Eline}, A. and {Eppling}, F.~J. and {Eronen}, T. and {Fan}, Y.~Y. and {Farnesini}, L. and {Feng}, J. and {Fiandrini}, E. and {Fiasson}, A. and {Finch}, E. and {Fisher}, P. and {Galaktionov}, Y. and {Gallucci}, G. and {Garc{\'\i}a}, B. and {Garc{\'\i}a-L{\'o}pez}, R. and {Gast}, H. and {Gebauer}, I. and {Gervasi}, M. and {Ghelfi}, A. and {Gillard}, W. and {Giovacchini}, F. and {Goglov}, P. and {Gong}, J. and {Goy}, C. and {Grabski}, V. and {Grandi}, D. and {Graziani}, M. and {Guandalini}, C. and {Guerri}, I. and {Guo}, K.~H. and {Habiby}, M. and {Haino}, S. and {Han}, K.~C. and {He}, Z.~H. and {Heil}, M. and {Hoffman}, J. and {Hsieh}, T.~H. and {Huang}, Z.~C. and {Huh}, C. and {Incagli}, M. and {Ionica}, M. and {Jang}, W.~Y. and {Jinchi}, H. and {Kanishev}, K. and {Kim}, G.~N. and {Kim}, K.~S. and {Kirn}, Th. and {Kossakowski}, R. and {Kounina}, O. and {Kounine}, A. and {Koutsenko}, V. and {Krafczyk}, M.~S. and {Kunz}, S. and {La Vacca}, G. and {Laudi}, E. and {Laurenti}, G. and {Lazzizzera}, I. and {Lebedev}, A. and {Lee}, H.~T. and {Lee}, S.~C. and {Leluc}, C. and {Li}, H.~L. and {Li}, J.~Q. and {Li}, Q. and {Li}, Q. and {Li}, T.~X. and {Li}, W. and {Li}, Y. and {Li}, Z.~H. and {Li}, Z.~Y. and {Lim}, S. and {Lin}, C.~H. and {Lipari}, P. and {Lippert}, T. and {Liu}, D. and {Liu}, H. and {Lomtadze}, T. and {Lu}, M.~J. and {Lu}, Y.~S. and {Luebelsmeyer}, K. and {Luo}, F. and {Luo}, J.~Z. and {Lv}, S.~S. and {Majka}, R. and {Malinin}, A. and {Ma{\~n}{\'a}}, C. and {Mar{\'\i}n}, J. and {Martin}, T. and {Mart{\'\i}nez}, G. and {Masi}, N. and {Maurin}, D. and {Menchaca-Rocha}, A. and {Meng}, Q. and {Mo}, D.~C. and {Morescalchi}, L. and {Mott}, P. and {M{\"u}ller}, M. and {Ni}, J.~Q. and {Nikonov}, N. and {Nozzoli}, F. and {Nunes}, P. and {Obermeier}, A. and {Oliva}, A. and {Orcinha}, M. and {Palmonari}, F. and {Palomares}, C. and {Paniccia}, M. and {Papi}, A. and {Pedreschi}, E. and {Pensotti}, S. and {Pereira}, R. and {Pilo}, F. and {Piluso}, A. and {Pizzolotto}, C. and {Plyaskin}, V. and {Pohl}, M. and {Poireau}, V. and {Postaci}, E. and {Putze}, A. and {Quadrani}, L. and {Qi}, X.~M. and {Rancoita}, P.~G. and {Rapin}, D. and {Ricol}, J.~S. and {Rodr{\'\i}guez}, I. and {Rosier-Lees}, S. and {Rozhkov}, A. and {Rozza}, D. and {Sagdeev}, R. and {Sandweiss}, J. and {Saouter}, P. and {Sbarra}, C. and {Schael}, S. and {Schmidt}, S.~M. and {Schuckardt}, D. and {von Dratzig}, A. Schulz and {Schwering}, G. and {Scolieri}, G. and {Seo}, E.~S. and {Shan}, B.~S. and {Shan}, Y.~H. and {Shi}, J.~Y. and {Shi}, X.~Y. and {Shi}, Y.~M. and {Siedenburg}, T. and {Son}, D. and {Spada}, F. and {Spinella}, F. and {Sun}, W. and {Sun}, W.~H. and {Tacconi}, M. and {Tang}, C.~P. and {Tang}, X.~W. and {Tang}, Z.~C. and {Tao}, L. and {Tescaro}, D. and {Ting}, Samuel C.~C. and {Ting}, S.~M. and {Tomassetti}, N. and {Torsti}, J. and {T{\"u}rko{\v{g}}lu}, C. and {Urban}, T. and {Vagelli}, V. and {Valente}, E. and {Vannini}, C. and {Valtonen}, E. and {Vaurynovich}, S. and {Vecchi}, M. and {Velasco}, M. and {Vialle}, J.~P. and {Wang}, L.~Q. and {Wang}, Q.~L. and {Wang}, R.~S. and {Wang}, X. and {Wang}, Z.~X. and {Weng}, Z.~L. and {Whitman}, K. and {Wienkenh{\"o}ver}, J. and {Wu}, H. and {Xia}, X. and {Xie}, M. and {Xie}, S. and {Xiong}, R.~Q. and {Xin}, G.~M. and {Xu}, N.~S. and {Xu}, W. and {Yan}, Q. and {Yang}, J. and {Yang}, M. and {Ye}, Q.~H. and {Yi}, H. and {Yu}, Y.~J. and {Yu}, Z.~Q. and {Zeissler}, S. and {Zhang}, J.~H. and {Zhang}, M.~T. and {Zhang}, X.~B. and {Zhang}, Z. and {Zheng}, Z.~M. and {Zhuang}, H.~L. and {Zhukov}, V. and {Zichichi}, A. and {Zimmermann}, N. and {Zuccon}, P. and {Zurbach}, C. and {AMS Collaboration}},
+        title = "{High Statistics Measurement of the Positron Fraction in Primary Cosmic Rays of 0.5-500 GeV with the Alpha Magnetic Spectrometer on the International Space Station}",
+      journal = {\prl},
+         year = 2014,
+        month = sep,
+       volume = {113},
+       number = {12},
+          eid = {121101},
+        pages = {121101},
+          doi = {10.1103/PhysRevLett.113.121101},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014PhRvL.113l1101A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2009JCAP...01..025H,
+       author = {{Hooper}, Dan and {Blasi}, Pasquale and {Serpico}, Pasquale Dario},
+        title = "{Pulsars as the sources of high energy cosmic ray positrons}",
+      journal = {\jcap},
+     keywords = {Astrophysics, High Energy Physics - Phenomenology},
+         year = 2009,
+        month = jan,
+       volume = {2009},
+       number = {1},
+          eid = {025},
+        pages = {025},
+          doi = {10.1088/1475-7516/2009/01/025},
+archivePrefix = {arXiv},
+       eprint = {0810.1527},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009JCAP...01..025H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2017PhRvL.118s1101C,
+       author = {{Cui}, Ming-Yang and {Yuan}, Qiang and {Tsai}, Yue-Lin Sming and {Fan}, Yi-Zhong},
+        title = "{Possible Dark Matter Annihilation Signal in the AMS-02 Antiproton Data}",
+      journal = {\prl},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, High Energy Physics - Phenomenology},
+         year = 2017,
+        month = may,
+       volume = {118},
+       number = {19},
+          eid = {191101},
+        pages = {191101},
+          doi = {10.1103/PhysRevLett.118.191101},
+archivePrefix = {arXiv},
+       eprint = {1610.03840},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017PhRvL.118s1101C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2019PhRvD..99j3026C,
+       author = {{Cholis}, Ilias and {Linden}, Tim and {Hooper}, Dan},
+        title = "{A robust excess in the cosmic-ray antiproton spectrum: Implications for annihilating dark matter}",
+      journal = {\prd},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology},
+         year = 2019,
+        month = may,
+       volume = {99},
+       number = {10},
+          eid = {103026},
+        pages = {103026},
+          doi = {10.1103/PhysRevD.99.103026},
+archivePrefix = {arXiv},
+       eprint = {1903.02549},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019PhRvD..99j3026C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2021arXiv210714606H,
+       author = {{Heisig}, Jan and {Korsmeier}, Michael and {Winkler}, Martin Wolfgang},
+        title = "{Revisiting the AMS-02 antiproton excess: The role of correlated errors}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, High Energy Physics - Phenomenology},
+         year = 2021,
+        month = jul,
+          eid = {arXiv:2107.14606},
+        pages = {arXiv:2107.14606},
+archivePrefix = {arXiv},
+       eprint = {2107.14606},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210714606H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2017ApJ...846...67P,
+       author = {{Porter}, T.~A. and {J{\'o}hannesson}, G. and {Moskalenko}, I.~V.},
+        title = "{High-energy Gamma Rays from the Milky Way: Three-dimensional Spatial Models for the Cosmic-Ray and Radiation Field Densities in the Interstellar Medium}",
+      journal = {\apj},
+     keywords = {astroparticle physics, cosmic rays, galaxy: general, gamma rays: general, gamma rays: ISM, radiation mechanisms: non-thermal, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2017,
+        month = sep,
+       volume = {846},
+       number = {1},
+          eid = {67},
+        pages = {67},
+          doi = {10.3847/1538-4357/aa844d},
+archivePrefix = {arXiv},
+       eprint = {1708.00816},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...846...67P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2010ApJ...724.1044S,
+       author = {{Su}, Meng and {Slatyer}, Tracy R. and {Finkbeiner}, Douglas P.},
+        title = "{Giant Gamma-ray Bubbles from Fermi-LAT: Active Galactic Nucleus Activity or Bipolar Galactic Wind?}",
+      journal = {\apj},
+     keywords = {galaxies: active, galaxies: starburst, gamma rays: diffuse background, ISM: jets and outflows, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Galaxy Astrophysics},
+         year = 2010,
+        month = dec,
+       volume = {724},
+       number = {2},
+        pages = {1044-1082},
+          doi = {10.1088/0004-637X/724/2/1044},
+archivePrefix = {arXiv},
+       eprint = {1005.5480},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJ...724.1044S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
