Updates from Overleaf

--- a/VTthesis.bib
+++ b/VTthesis.bib
@@ -5972,3 +5972,235 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...876...20H},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{1939LicOB..19....1B,
+       author = {{Bowen}, Ira Sprague and {Wyse}, Arthur Bambridge},
+        title = "{The spectra and chemical composition of the gaseous nebulae, NGC 6572, 7027, 7662}",
+      journal = {Lick Observatory Bulletin},
+     keywords = {NEBULAE: SPECTRA},
+         year = 1939,
+        month = jan,
+       volume = {495},
+        pages = {1},
+          doi = {10.5479/ADS/bib/1939LicOB.19.1B},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1939LicOB..19....1B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1957BAN....14...17S,
+       author = {{Schmidt}, M.},
+        title = "{The distribution of mass in M 31}",
+      journal = {\bain},
+         year = 1957,
+        month = nov,
+       volume = {14},
+        pages = {17},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1957BAN....14...17S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1957BAN....14....1V,
+       author = {{van de Hulst}, H.~C. and {Raimond}, E. and {van Woerden}, H.},
+        title = "{Rotation and density distribution of the Andromeda nebula derived from observations of the 21-cm line}",
+      journal = {\bain},
+         year = 1957,
+        month = nov,
+       volume = {14},
+        pages = {1},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1957BAN....14....1V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@Misc{NASAs2013,
+  author     = {GMS, NASA's},
+  month      = aug,
+  title      = {{GMS}: {Fermi}'s {Five}-year {View} of the {Gamma}-ray {Sky}},
+  year       = {2013},
+  abstract   = {This all-sky view shows how the sky appears at energies greater than 1 billion electron volts (GeV) according to five years of data from NASA's Fermi Gamma-ray Space Telescope. (For comparison, the energy of visible light is between 2 and 3 electron volts.) The image contains 60 months of data from Fermi's Large Area Telescope; for better angular resolution, the map shows only gamma rays converted at the front of the instrument's tracker. Brighter colors indicate brighter gamma-ray sources. The map is shown in galactic coordinates, which places the midplane of our galaxy along the center. {\textless}p{\textgreater}{\textless}p{\textgreater}The five-year Fermi map is available in multiple resolutions below, along with additional plots containing reference information and identifying some of the brightest sources.},
+  language   = {en},
+  shorttitle = {{GMS}},
+  url        = {https://svs.gsfc.nasa.gov/11342},
+  urldate    = {2021-11-01},
+}
+
+@ARTICLE{2016Galax...4...78H,
+       author = {{Husdal}, Lars},
+        title = "{On Effective Degrees of Freedom in the Early Universe}",
+      journal = {Galaxies},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology},
+         year = 2016,
+        month = dec,
+       volume = {4},
+       number = {4},
+        pages = {78},
+          doi = {10.3390/galaxies4040078},
+archivePrefix = {arXiv},
+       eprint = {1609.04979},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016Galax...4...78H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1985PhRvD..31.3059G,
+       author = {{Goodman}, Mark W. and {Witten}, Edward},
+        title = "{Detectability of certain dark-matter candidates}",
+      journal = {\prd},
+     keywords = {96.40.Jj, 11.30.Pb, 14.80.Pb, 98.60.Ln, Supersymmetry},
+         year = 1985,
+        month = jun,
+       volume = {31},
+       number = {12},
+        pages = {3059-3063},
+          doi = {10.1103/PhysRevD.31.3059},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1985PhRvD..31.3059G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2010A&A...509A..25W,
+       author = {{Weber}, M. and {de Boer}, W.},
+        title = "{Determination of the local dark matter density in our Galaxy}",
+      journal = {\aap},
+     keywords = {Galaxy: halo, Galaxy: structure, Galaxy: kinematics and dynamics, Galaxy: fundamental parameters, Galaxy: general, Astrophysics - Cosmology and Extragalactic Astrophysics},
+         year = 2010,
+        month = jan,
+       volume = {509},
+          eid = {A25},
+        pages = {A25},
+          doi = {10.1051/0004-6361/200913381},
+archivePrefix = {arXiv},
+       eprint = {0910.4272},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010A&A...509A..25W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2012PDU.....1...94B,
+       author = {{Baudis}, Laura},
+        title = "{Direct dark matter detection: The next decade}",
+      journal = {Physics of the Dark Universe},
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Extragalactic Astrophysics, High Energy Physics - Experiment, Physics - Instrumentation and Detectors},
+         year = 2012,
+        month = nov,
+       volume = {1},
+       number = {1-2},
+        pages = {94-108},
+          doi = {10.1016/j.dark.2012.10.006},
+archivePrefix = {arXiv},
+       eprint = {1211.7222},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2012PDU.....1...94B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2019ApJ...874....3N,
+       author = {{Necib}, Lina and {Lisanti}, Mariangela and {Belokurov}, Vasily},
+        title = "{Inferred Evidence for Dark Matter Kinematic Substructure with SDSS-Gaia}",
+      journal = {\apj},
+     keywords = {dark matter, Galaxy: evolution, Galaxy: kinematics and dynamics, stars: kinematics and dynamics, surveys, Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology},
+         year = 2019,
+        month = mar,
+       volume = {874},
+       number = {1},
+          eid = {3},
+        pages = {3},
+          doi = {10.3847/1538-4357/ab095b},
+archivePrefix = {arXiv},
+       eprint = {1807.02519},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...874....3N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2019PhRvL.122g1301A,
+       author = {{Aprile}, E. and {Aalbers}, J. and {Agostini}, F. and {Alfonsi}, M. and {Althueser}, L. and {Amaro}, F.~D. and {Anthony}, M. and {Antochi}, V.~C. and {Arneodo}, F. and {Baudis}, L. and {Bauermeister}, B. and {Benabderrahmane}, M.~L. and {Berger}, T. and {Breur}, P.~A. and {Brown}, A. and {Brown}, A. and {Brown}, E. and {Bruenner}, S. and {Bruno}, G. and {Budnik}, R. and {Capelli}, C. and {Cardoso}, J.~M.~R. and {Cichon}, D. and {Coderre}, D. and {Colijn}, A.~P. and {Conrad}, J. and {Cussonneau}, J.~P. and {Decowski}, M.~P. and {de Perio}, P. and {di Gangi}, P. and {di Giovanni}, A. and {Diglio}, S. and {Elykov}, A. and {Eurin}, G. and {Fei}, J. and {Ferella}, A.~D. and {Fieguth}, A. and {Fulgione}, W. and {Gallo Rosso}, A. and {Galloway}, M. and {Gao}, F. and {Garbini}, M. and {Grandi}, L. and {Greene}, Z. and {Hasterok}, C. and {Hogenbirk}, E. and {Howlett}, J. and {Iacovacci}, M. and {Itay}, R. and {Joerg}, F. and {Kaminsky}, B. and {Kazama}, S. and {Kish}, A. and {Koltman}, G. and {Kopec}, A. and {Landsman}, H. and {Lang}, R.~F. and {Levinson}, L. and {Lin}, Q. and {Lindemann}, S. and {Lindner}, M. and {Lombardi}, F. and {Lopes}, J.~A.~M. and {L{\'o}pez Fune}, E. and {Macolino}, C. and {Mahlstedt}, J. and {Manfredini}, A. and {Marignetti}, F. and {Marrod{\'a}n Undagoitia}, T. and {Masbou}, J. and {Masson}, D. and {Mastroianni}, S. and {Messina}, M. and {Micheneau}, K. and {Miller}, K. and {Molinario}, A. and {Mor{\^a}}, K. and {Murra}, M. and {Naganoma}, J. and {Ni}, K. and {Oberlack}, U. and {Odgers}, K. and {Pelssers}, B. and {Piastra}, F. and {Pienaar}, J. and {Pizzella}, V. and {Plante}, G. and {Podviianiuk}, R. and {Priel}, N. and {Qiu}, H. and {Ram{\'\i}rez Garc{\'\i}a}, D. and {Reichard}, S. and {Riedel}, B. and {Rizzo}, A. and {Rocchetti}, A. and {Rupp}, N. and {Dos Santos}, J.~M.~F. and {Sartorelli}, G. and {{\v{S}}ar{\v{c}}evi{\'c}}, N. and {Scheibelhut}, M. and {Schindler}, S. and {Schreiner}, J. and {Schulte}, D. and {Schumann}, M. and {Scotto Lavina}, L. and {Selvi}, M. and {Shagin}, P. and {Shockley}, E. and {Silva}, M. and {Simgen}, H. and {Therreau}, C. and {Thers}, D. and {Toschi}, F. and {Trinchero}, G. and {Tunnell}, C. and {Upole}, N. and {Vargas}, M. and {Wack}, O. and {Wang}, H. and {Wang}, Z. and {Wei}, Y. and {Weinheimer}, C. and {Wenz}, D. and {Wittweg}, C. and {Wulf}, J. and {Ye}, J. and {Zhang}, Y. and {Zhu}, T. and {Zopounidis}, J.~P. and {Hoferichter}, M. and {Klos}, P. and {Men{\'e}ndez}, J. and {Schwenk}, A. and {Xenon Collaboration}},
+        title = "{First Results on the Scalar WIMP-Pion Coupling, Using the XENON1T Experiment}",
+      journal = {\prl},
+     keywords = {High Energy Physics - Phenomenology, Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Experiment, Nuclear Theory},
+         year = 2019,
+        month = feb,
+       volume = {122},
+       number = {7},
+          eid = {071301},
+        pages = {071301},
+          doi = {10.1103/PhysRevLett.122.071301},
+archivePrefix = {arXiv},
+       eprint = {1811.12482},
+ primaryClass = {hep-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019PhRvL.122g1301A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2013IJMPA..2830052M,
+       author = {{Mitsou}, Vasiliki A.},
+        title = "{Shedding Light on Dark Matter at Colliders}",
+      journal = {International Journal of Modern Physics A},
+     keywords = {Dark matter, supersymmetry, extra dimensions, beyond Standard Model physics, Large Hadron Collider, ATLAS, CMS, 95.35.+d, 12.60.Jv, 14.70.Kv, Dark matter, Supersymmetric models, High Energy Physics - Experiment, High Energy Physics - Phenomenology},
+         year = 2013,
+        month = dec,
+       volume = {28},
+       number = {31},
+          eid = {1330052},
+        pages = {1330052},
+          doi = {10.1142/S0217751X13300524},
+archivePrefix = {arXiv},
+       eprint = {1310.1072},
+ primaryClass = {hep-ex},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013IJMPA..2830052M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Murgia:2020dzu,
+    author = "Murgia, Simona",
+    title = "{The Fermi\textendash{}LAT Galactic Center Excess: Evidence of Annihilating Dark Matter?}",
+    doi = "10.1146/annurev-nucl-101916-123029",
+    journal = "Ann. Rev. Nucl. Part. Sci.",
+    volume = "70",
+    pages = "455--483",
+    year = "2020"
+}
+
+@ARTICLE{2014PASA...31...30K,
+       author = {{Karakas}, Amanda I. and {Lattanzio}, John C.},
+        title = "{The Dawes Review 2: Nucleosynthesis and Stellar Yields of Low- and Intermediate-Mass Single Stars}",
+      journal = {\pasa},
+     keywords = {ISM: composition, nucleosynthesis, Population II stars, stars: AGB and post-AGB, stars: mixing, chemical evolution, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2014,
+        month = jul,
+       volume = {31},
+          eid = {e030},
+        pages = {e030},
+          doi = {10.1017/pasa.2014.21},
+archivePrefix = {arXiv},
+       eprint = {1405.0062},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014PASA...31...30K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@BOOK{2004hpa..book.....L,
+       author = {{Lorimer}, D.~R. and {Kramer}, M.},
+        title = "{Handbook of Pulsar Astronomy}",
+         year = 2004,
+       volume = {4},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2004hpa..book.....L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2011AIPC.1357..269T,
+       author = {{Tiengo}, A. and {Mignani}, R. and {de Luca}, A. and {Esposito}, P. and {Mereghetti}, S. and {Pellizzoni}, A.},
+        title = "{The first deep X-ray and optical observations of the closest isolated radio pulsar}",
+     keywords = {explosions, neutron stars, mass, gravitational lenses, 96.50.Vg, 97.60.Jd, 98.35.Ce, 98.62.Sb, Energetic particles, Neutron stars, Mass and mass distribution, Gravitational lenses and luminous arcs, Astrophysics - High Energy Astrophysical Phenomena},
+    booktitle = {Radio Pulsars: An Astrophysical Key to Unlock the Secrets of the Universe},
+         year = 2011,
+       editor = {{Burgay}, Marta and {D'Amico}, Nicol{\`o} and {Esposito}, Paolo and {Pellizzoni}, Alberto and {Possenti}, Andrea},
+       series = {American Institute of Physics Conference Series},
+       volume = {1357},
+        month = aug,
+        pages = {269-272},
+          doi = {10.1063/1.3615132},
+archivePrefix = {arXiv},
+       eprint = {1103.4538},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011AIPC.1357..269T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
